--- a/destino.html
+++ b/destino.html
@@ -46,12 +46,12 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <!--Ainda pretendo usar o dropdown para o log in-->
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Acesso</a></li>
+                    <li><a class="dropdown-item" href="#">Cadastre-se</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Ajuda</a></li>
                   </ul>
                 </li>
               </ul>
