--- a/promoçoes.html
+++ b/promoçoes.html
@@ -45,12 +45,12 @@
                                         Log-in
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Acesso</a></li>
+                                        <li><a class="dropdown-item" href="#">Cadastre-se</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="#">Ajuda</a></li>
                                     </ul>
                                 </li>
                             </ul>
